--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
+#main {
+}
+
 #scoreCard {
 margin:auto;
 margin-bottom:10px;
 width:50%;
+display:none
 }
 
 #status {
@@ -11,10 +15,27 @@ width:50%;
 #buttons {
   text-align:center;
   margin-bottom:10px;
+  display:none;
 }
 
 #tileTable {
   width:400px;
   height:400px;
   margin:auto;
+  display:none;
+}
+
+#startSection {
+  margin:auto;
+  text-align: center;
+}
+
+.vsSelector {
+  width: 200px;
+  height: 100px;
+  border: 2px solid black;
+  border-radius: 3%;
+  display: inline-block;
+  padding-top: 25px;
+  margin: 10px;
 }
