--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,18 @@
 #main {}
 
+#title {
+  background-color: darkgrey;
+  color: white;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  font-weight: bolder;
+}
+
 #scoreCard {
   margin: auto;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   width: 50%;
-  display: none
+  display: none;
 }
 
 #status {
@@ -39,9 +47,9 @@ td {
 .vsSelector {
   width: 200px;
   height: 100px;
-  border: 3px solid black;
+  border: 0px;
   display: inline-block;
-  margin: 10px;
+  margin: 20px;
   text-align: center;
   padding: 15px;
 }
